--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     android:paddingTop="5dp">
 
     <TextView
-        android:layout_marginStart="10dp"
         android:id="@android:id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="30dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/text1"
         android:textColor="#ffffff"
@@ -60,7 +60,7 @@
 
 
     <RelativeLayout
-
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/time"
@@ -267,6 +267,15 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/credit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/credit"
+            android:textColor="#ffffff"
+            android:textSize="12sp" />
     </RelativeLayout>
 
 </RelativeLayout>
