--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sample_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#212121"
@@ -39,8 +40,9 @@
         android:layout_above="@+id/time"
         android:layout_alignParentEnd="true"
         android:checked="false"
-        android:text="@string/en"
         android:textColor="#ffffff"
+        android:textOff="@string/en"
+        android:textOn="@string/ar"
         android:textSize="20sp" />
 
     <TextClock
@@ -271,7 +273,7 @@
             android:layout_centerHorizontal="true"
             android:text="@string/credit"
             android:textColor="#ffffff"
-            android:textSize="12sp" />
+            android:textSize="10sp" />
     </RelativeLayout>
 
 </RelativeLayout>
