--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,6 +145,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/dhort"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="start"
